<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_quarter"
        android:textColor="@color/colorRed"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorRed"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/colorLightBlue"
            android:text="@string/jan"
            android:padding="30dp"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorDarkBlue"
            android:padding="32dp"
            android:text="@string/feb"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorGreen"
            android:padding="29dp"
            android:text="@string/mar"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />


</LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/jan"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/todo" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/feb"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/todo" />
            <ImageView

                android:layout_width="match_parent"

                android:layout_height="80dp"

                android:scaleType="centerCrop"

                android:src="@drawable/mar"

                android:layout_marginEnd="5dp"

                android:layout_marginStart="10dp"

                android:layout_marginTop="5dp"
                android:contentDescription="@string/todo" />

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_quarter"
        android:textColor="@color/colorRed"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorRed"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/colorYellow"
                android:text="@string/apr"
                android:padding="30dp"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/colorRed"
                android:text="@string/may"
                android:padding="28dp"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@color/colorDarkRed"
                android:text="@string/jun"
                android:padding="30dp"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/apr"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/todo" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/may"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/todo" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/jun"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/todo" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>










